# targeted_fibrosis_drug_screen

./: .gitignore  .pre-commit-config.yaml  README.md  cellprofiler_env.yml  machine_learning_env.yml  preprocessing_env.yml  r_fibrosis_env.yml
3a.train_dmso_logistic_regression_models/: pyproject.toml
3a.train_dmso_logistic_regression_models/src/cfret_ml/: data_split_utils.py  data_utils.py  eval.py  orchestrator.py  preprocess.py  regression_feature_selector.py  regression_model.py
3a.train_dmso_logistic_regression_models/train_platemapwise_model/: 0.split_data.ipynb  1.train_models.ipynb  2.summarize_fits.ipynb  3.inference_on_treated.ipynb  4.summarize_inferences.ipynb  5.hit_calling.ipynb  README.md  final_merged_mean_buscar_map_scores.csv  map_scores.csv  procedure.md
3a.train_dmso_logistic_regression_models/train_platemapwise_model/eval_plots/: model_fit_summary.csv
3a.train_dmso_logistic_regression_models/train_platemapwise_model/inference_results/: hit_call_table.csv  hit_summary.csv  logit_inference_summary.csv  logit_inference_summary.parquet  treatment_well.csv
3a.train_dmso_logistic_regression_models/train_platemapwise_model/nbconverted/: 0.split_data.py  1.train_models.py  2.summarize_fits.py
3a.train_dmso_logistic_regression_models/train_platewise_model/: 0.split_data.ipynb  1.train_models.ipynb  2.summarize_fits.ipynb  README.md
3a.train_dmso_logistic_regression_models/train_platewise_model/eval_plots/: model_fit_summary.csv
3a.train_dmso_logistic_regression_models/train_platewise_model/nbconverted/: 0.split_data.py  1.train_models.py  (+1 more)
(+322 files in other folders)
